--- a/array_analyzer/extract/txt_parser_nb.ipynb
+++ b/array_analyzer/extract/txt_parser_nb.ipynb
@@ -15,7 +15,8 @@
     "import openpyxl as xl\n",
     "import csv\n",
     "import os\n",
-    "import xmltodict"
+    "import xmltodict\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -639,6 +640,379 @@
    ],
    "source": [
     "xml_spot_array_numpy_antigen.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xlsx_template = '/Volumes/GoogleDrive/My Drive/ELISAarrayReader/data_for_tests_and_github/Metadata_and_Plate_configuration.xlsx'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plate_info = pd.read_excel(xlsx_template, usecols='A:M', sheet_name=None)\n",
+    "plate_info = pd.read_excel(xlsx_template, sheet_name=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['imaging_and_array_parameters', 'array_antigens', 'well_antibody_name', 'well_antibody_concentration', 'sample', 'sample_concentration'])"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Parameter', 'Value'], dtype='object')"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['imaging_and_array_parameters'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       pixel_size\n",
+       "1              NaN\n",
+       "2             rows\n",
+       "3          columns\n",
+       "4          v_pitch\n",
+       "5          h_pitch\n",
+       "6       spot_width\n",
+       "7        bg_offset\n",
+       "8     bg_thickness\n",
+       "9         max_diam\n",
+       "10        min_diam\n",
+       "11      pixel_size\n",
+       "Name: Parameter, dtype: object"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['imaging_and_array_parameters']['Parameter']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.0049\n",
+       "1        NaN\n",
+       "2     6.0000\n",
+       "3     6.0000\n",
+       "4     0.4100\n",
+       "5     0.4050\n",
+       "6     0.2000\n",
+       "7     0.0500\n",
+       "8     0.0500\n",
+       "9     0.3000\n",
+       "10    0.1000\n",
+       "11    0.0049\n",
+       "Name: Value, dtype: float64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['imaging_and_array_parameters']['Value']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key = pixel_size, \tval = 0.0049\n",
+      "key = nan, \tval = nan\n",
+      "key = rows, \tval = 6.0\n",
+      "key = columns, \tval = 6.0\n",
+      "key = v_pitch, \tval = 0.41\n",
+      "key = h_pitch, \tval = 0.405\n",
+      "key = spot_width, \tval = 0.2\n",
+      "key = bg_offset, \tval = 0.05\n",
+      "key = bg_thickness, \tval = 0.05\n",
+      "key = max_diam, \tval = 0.3\n",
+      "key = min_diam, \tval = 0.1\n",
+      "key = pixel_size, \tval = 0.0049\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, value in enumerate(plate_info['imaging_and_array_parameters']['Parameter']):\n",
+    "    print(f\"key = {value}, \\tval = {plate_info['imaging_and_array_parameters']['Value'][idx]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Fiducial</td>\n",
+       "      <td>Flu vaccine 2018-2019</td>\n",
+       "      <td>Flu vaccine 2018-2019</td>\n",
+       "      <td>Flu vaccine 2018-2019</td>\n",
+       "      <td>Flu vaccine 2018-2019</td>\n",
+       "      <td>Fiducial</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Fiducial</td>\n",
+       "      <td>H1 HA</td>\n",
+       "      <td>H1 HA</td>\n",
+       "      <td>H1 HA</td>\n",
+       "      <td>H1 HA</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Positive Control</td>\n",
+       "      <td>H3 HA</td>\n",
+       "      <td>H3 HA</td>\n",
+       "      <td>H3 HA</td>\n",
+       "      <td>H3 HA</td>\n",
+       "      <td>Negative Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Positive Control</td>\n",
+       "      <td>H7 HA</td>\n",
+       "      <td>H7 HA</td>\n",
+       "      <td>H7 HA</td>\n",
+       "      <td>H7 HA</td>\n",
+       "      <td>Negative Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Positive Control</td>\n",
+       "      <td>HA FluB I</td>\n",
+       "      <td>HA FluB I</td>\n",
+       "      <td>HA FluB I</td>\n",
+       "      <td>HA FluB I</td>\n",
+       "      <td>Negative Control</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Fiducial</td>\n",
+       "      <td>HA FluB II</td>\n",
+       "      <td>HA FluB II</td>\n",
+       "      <td>HA FluB II</td>\n",
+       "      <td>HA FluB II</td>\n",
+       "      <td>Fiducial</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                 0                      1                      2  \\\n",
+       "0           0          Fiducial  Flu vaccine 2018-2019  Flu vaccine 2018-2019   \n",
+       "1           1          Fiducial                  H1 HA                  H1 HA   \n",
+       "2           2  Positive Control                  H3 HA                  H3 HA   \n",
+       "3           3  Positive Control                  H7 HA                  H7 HA   \n",
+       "4           4  Positive Control              HA FluB I              HA FluB I   \n",
+       "5           5          Fiducial             HA FluB II             HA FluB II   \n",
+       "\n",
+       "                       3                      4                 5  \n",
+       "0  Flu vaccine 2018-2019  Flu vaccine 2018-2019          Fiducial  \n",
+       "1                  H1 HA                  H1 HA               NaN  \n",
+       "2                  H3 HA                  H3 HA  Negative Control  \n",
+       "3                  H7 HA                  H7 HA  Negative Control  \n",
+       "4              HA FluB I              HA FluB I  Negative Control  \n",
+       "5             HA FluB II             HA FluB II          Fiducial  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['array_antigens']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k: Unnamed: 0, \tv: 0\n",
+      "k: 0, \tv: 1\n",
+      "k: 1, \tv: 2\n",
+      "k: 2, \tv: 3\n",
+      "k: 3, \tv: 4\n",
+      "k: 4, \tv: 5\n",
+      "k: 5, \tv: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, value in enumerate(plate_info['array_antigens'].keys()):\n",
+    "    print(f\"k: {value}, \\tv: {idx}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 0, 1, 2, 3, 4, 5], dtype='object')"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['array_antigens'].keys() # keys are first row (or column names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            Fiducial\n",
+       "1            Fiducial\n",
+       "2    Positive Control\n",
+       "3    Positive Control\n",
+       "4    Positive Control\n",
+       "5            Fiducial\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plate_info['array_antigens'][0] # each key maps to a pd.Series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fiducial\n",
+      "Fiducial\n",
+      "Positive Control\n",
+      "Positive Control\n",
+      "Positive Control\n",
+      "Fiducial\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in plate_info['array_antigens'][0]:\n",
+    "    print(item)"
    ]
   },
   {
