functioning fit with metadata parser

--- a/array_analyzer/extract/notebooks/txt_parser_nb.ipynb
+++ b/array_analyzer/extract/notebooks/txt_parser_nb.ipynb
@@ -1017,6 +1017,67 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "\t0\tFiducial\n",
+      "\t1\tFiducial\n",
+      "\t2\tPositive Control\n",
+      "\t3\tPositive Control\n",
+      "\t4\tPositive Control\n",
+      "\t5\tFiducial\n",
+      "1\n",
+      "\t0\tFlu vaccine 2018-2019\n",
+      "\t1\tH1 HA\n",
+      "\t2\tH3 HA\n",
+      "\t3\tH7 HA\n",
+      "\t4\tHA FluB I\n",
+      "\t5\tHA FluB II\n",
+      "2\n",
+      "\t0\tFlu vaccine 2018-2019\n",
+      "\t1\tH1 HA\n",
+      "\t2\tH3 HA\n",
+      "\t3\tH7 HA\n",
+      "\t4\tHA FluB I\n",
+      "\t5\tHA FluB II\n",
+      "3\n",
+      "\t0\tFlu vaccine 2018-2019\n",
+      "\t1\tH1 HA\n",
+      "\t2\tH3 HA\n",
+      "\t3\tH7 HA\n",
+      "\t4\tHA FluB I\n",
+      "\t5\tHA FluB II\n",
+      "4\n",
+      "\t0\tFlu vaccine 2018-2019\n",
+      "\t1\tH1 HA\n",
+      "\t2\tH3 HA\n",
+      "\t3\tH7 HA\n",
+      "\t4\tHA FluB I\n",
+      "\t5\tHA FluB II\n",
+      "5\n",
+      "\t0\tFiducial\n",
+      "\t1\tnan\n",
+      "\t2\tNegative Control\n",
+      "\t3\tNegative Control\n",
+      "\t4\tNegative Control\n",
+      "\t5\tFiducial\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in plate_info['array_antigens'].keys()[1:]:\n",
+    "    print(col)\n",
+    "    for row, value in enumerate(plate_info['array_antigens'][col]):\n",
+    "        print(f\"\\t{row}\\t{value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
